More cosmetic changes. Mouseover on resume button, blinking question marks on empty time period, changed now button timer to every minute instead of every second, fixed minor alignment issues with buttons

--- a/public/css.css
+++ b/public/css.css
@@ -23,7 +23,7 @@ div.time-select.margin-left{
     margin-left:17px;
 }
 .listOfActiveTasks{
-    margin-left:51px;
+    margin-left:33px;
 }
 .margin-bottom{
     margin-bottom:14px;
@@ -88,7 +88,9 @@ div.time-select.margin-left{
 .taskNote{
 
 }
-
+.task-submenu{
+	margin-left:47px;
+}
 .timePeriodNote{
     
 }
